--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "run-s lint:*",
@@ -18,10 +17,10 @@
   "dependencies": {
     "pinia": "^3.0.4",
     "vue": "^3.5.29",
+    "vue-i18n": "^11.2.8",
     "vue-router": "^5.0.3"
   },
   "devDependencies": {
-    "@playwright/test": "^1.58.2",
     "@tailwindcss/vite": "^4.2.1",
     "@tsconfig/node24": "^24.0.4",
     "@types/jsdom": "^28.0.0",
