--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,8 +5,7 @@
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*",
-    "eslint.config.*"
+    "eslint.config.*",
   ],
   "compilerOptions": {
     "noEmit": true,
@@ -14,6 +13,6 @@
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
-  }
+    "types": ["node"],
+  },
 }
